--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -195,7 +195,7 @@
                     <button class="btn btn-block"><i class="icon-link"></i> | Short-Url Copy to Clipboard</button>
                     <button class="btn btn-facebook btn-block"><i class="icon-facebook"></i> | Share with Facebook</button>
                     <button class="btn btn-twitter btn-block"><i class="icon-twitter"></i> | Share with Twitter</button>
-                    <button class="btn btn-tumblr btn-block"><i class="icon-tumblr-sign"></i> | Share with Tumblr</button>
+                    <button class="btn btn-google-plus btn-block"><i class="icon-google-plus"></i> | Share with Google</button>
                   </div>
                 </div>
               </div>
