--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -32,6 +32,7 @@
           <li><%= link_to "Legal and Privacy", info_path %></li>
           <li><%= link_to "Info and Help", info_path %></li>
           <li><%= link_to "Sign Up", signup_path %></li>
+          <li><a href="http://blog.100motels.com">Blog</a></li>
         </ul>
       </div>
     </footer>
