getting sass media queries in order

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -36,8 +36,8 @@ $xlarge: 1200;
 html, body  {
     height: 100%;
     .not-landing {
-      // background-image: url(image_path('tex2res5.png'));
-      background-image: url(image_path('weave.png'));
+      background-image: url(image_path('tex2res5.png'));
+      // background-image: url(image_path('weave.png'));
     }
 }
 
