--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,26 +1,27 @@
-<div class="landing">
-  <div class="big-logo">
+<div class="landing-top">
+  <div class="logo-nav">
     <% unless current_user %>
       <h2>100 Motels | <small><%= link_to "sign-in", login_path %> &middot; <%= link_to "events", events_path %> </small></h2>
     <% end %>
   </div>
-  <div class="headline container small-container pagination-centered">
+  <div class="headline small-container text-center container">
     <h2>
-      <span class="black-back">Tour the world without a record label.</span>
+      <span class="black-background">Tour the world without a record label.</span>
     </h2> <br>
     <div class="row-fluid">
       <div class="span3 offset1"><%= new_or_view_event %></div>
       <div class="span6 search"><%= render 'search' %></div>
     </div>
     <div class="row-fluid">
-      <div class="span2 offset8"><a href="#info-section"> learn more <i class="icon-chevron-sign-down"></i></a></div>
-    </div>
+      <div class="span6 offset6 learn-more">
+        <a href="#info-section"> learn more <i class="icon-chevron-sign-down"></i></a>
+      </div>
   </div>
 </div>
-<div class="landing-info container small-container" id="info-section">
+<div class="landing-bottom small-container container" id="info-section">
   <div class="row-fluid">
     <div class="span6 offset6">
-      <h3 class="">Features</h3>
+      <h3>Features</h3>
       <p class="lead">A Funding & Ticketing platform designed to be flexible and reusable. No time-limits, take as long as you need.</p>
     </div>
   </div>
