--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -31,7 +31,7 @@
           <li><span class="label label-info">Time left <i class="icon-time"></i> <%= @event.date > DateTime.now + 2.hour ? distance_of_time_in_words(Time.now, @event.date, include_seconds = false) : "Time's up!"  %></span></li>
           <li><span class="label label-info">Funding <i class="icon-money"></i> <%= number_to_currency(@event.orders.sum(&:total_price)) %></span></li>
           <li><span class="label label-info">unsold tickets: <%= @event.capacity - @event.orders.funding.sum(:quantity) %></span></li>
-          <li><%= @event.private_or_public %></li>
+          <li class="visible"><%= @event.private_or_public %></li>
         </ul>
       </legend>
     </div>
