--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -24,9 +24,9 @@
 						<li class="span3">
 							<a class="thumbnail" href='<%= event_path(event) %>'>
 								<% if event.image.present?  %>
-	                <%= filepicker_image_tag event.image, width: 200, height: 200, fit: 'crop' %>
+	                <%= filepicker_image_tag event.image, w: 200, h: 200, fit: 'crop' %>
                 <% else %>
-	                <%= image_tag "https://s3-us-west-2.amazonaws.com/onehundredmotels/247915_156305404435251_2616225_n.jpg" %>
+	                <%= image_tag "ranelag.gif", height: "200", width: "200" %>
                 <% end %>
                 <div class="event-index-artists">
 									<h3><%= truncate(event.title) %><br><small><%= truncate(event.artist) %></small></h3>
