testing share buttons

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -4,6 +4,7 @@
   <%= tag :meta, property: "og:url", content: event_url(@event) %>
   <%= tag :meta, property: "og:image", content: @event.image %>
   <%= tag :meta, name: "twitter:card", content: "summary_large_image" %>
+  <%= tag :meta, name: "twitter:domain", content: "100motels.com" %>
   <%= tag :meta, name: "twitter:site", content: "@100Motels" %>
   <%= tag :meta, name: "twitter:title", content: @event.title %>
   <%= tag :meta, name: "twitter:description", content: @event.about %>
