--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -46,6 +46,7 @@
 							<div class="disabled-shares" data-toggle="popover" title="" data-content="Share" data-placement="bottom">
 								<i class="icon-facebook"></i>
 								<i class="icon-twitter"></i>
+								<i class="icon-google-plus"></i>
 								<i class="icon-share"></i>
 							</div>
 						</h3>
@@ -53,9 +54,10 @@
 							<small>share</small>
 							<div class="addthis_toolbox">
 								<div class="custom_images">
-									<a class="addthis_button_facebook"><i class="icon-facebook"></i></a>
-									<a class="addthis_button_twitter"><i class="icon-twitter"></i></a>
-									<a class="addthis_button_more"><i class="icon-share"></i></a>
+									<a href="http://www.facebook.com/sharer.php?u=<%= event_url(@event) %>"class="btn btn-facebook btn-block" target="_blank"><i class="icon-facebook"></i> | Share with Facebook</a>
+                    <a href="https://twitter.com/share?text=<%= @event.title %>&url=<%= event_url(@event) %>&via=100Motels" class="btn btn-twitter btn-block" target="_blank"><i class="icon-twitter"></i> | Share with Twitter</a>
+                    <a href="https://plus.google.com/share?url=<%= event_url(@event) %>" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="btn btn-google-plus btn-block" target="_blank"><i class="icon-google-plus"></i> | Share with Google</a>
+									<a class="btn btn-block addthis_button_more"><i class="icon-share"></i> | More Sharing Options</a>
 								</div>
 							</div>
 						</h3>
