--- a/app/views/organizer/events/_form.html.erb
+++ b/app/views/organizer/events/_form.html.erb
@@ -4,7 +4,10 @@
   <fieldset>
     <%= f.input(:visible, :label => "Publish Event?") unless current_user.state_unconfirmed? %>
     <%= f.input :title, label: "Event Title", placeholder: "A Headline for your Event" %>
-    <%= f.input :artist, label: "Artists", placeholder: "List the Performers / Attractions" %>
+    <%= f.input :artist, label: "Headliner", placeholder: "The Main Artist" %>
+    <%= f.input :first_support, required: false %>
+    <%= f.input :second_support, required: false %>
+    <%= f.input :third_support, required: false %>
     <%= f.input :venue, label: "Name of Venue", placeholder: "The Rickshaw" %>
     <%= f.input :new_location, label: "Location of Venue", hint: "Dublin, Ireland" %>
     <%= f.input :capacity, placeholder: "100" %>
