added free orders

--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -76,9 +76,10 @@ $ ->
       trigger: 'hover'
 
 $ ->
-  $('.icon-question-sign').popover
+  $('.defer-date').popover
       trigger: 'hover'
 
+# Progress bar
 $ ->
   width = $('.bar').data('funded')
   $('.bar').css("width", "#{width}%")
