--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -6,8 +6,8 @@
   <% else %>
     <%= f.input :email, label: false, input_html: { value: current_user.email } %>
   <% end %>
-  <% if current_user && current_user.customer_id? %>
-    <%= f.submit "Buy Now", html: {class: "btn btn-success btn-large"}, id: "buy-now" %>
+  <% if @event.ticket_price.blank? %>
+    <%= f.button :submit,  "Place Order", class: "btn btn-info" %>
   <% else %>
     <span class="stripe-controls warning-pop" data-toggle="popover" data-content="You have to enter a valid email address before you can place an order">
       <script src="https://checkout.stripe.com/v2/checkout.js" class="stripe-button"
