--- a/app/assets/javascripts/events.js.coffee.erb
+++ b/app/assets/javascripts/events.js.coffee.erb
@@ -2,9 +2,15 @@
 # All this logic will automatically be available in application.js.
 # You can use CoffeeScript in this file: http://jashkenas.github.com/coffee-script/
 
-# Best in place functions
-$ ->
-  $('.best_in_place').best_in_place()
+# Order Total method
+orderTotal = (quantity, price) ->
+  quantity = $('#order_quantity').val()
+  price = $('.price').data('original-content')
+  net_price = quantity * price
+  gross = (net_price / .961) + 0.30
+  order_price = if price > 0 then gross else 0.0
+  $('.order-total').html(order_price.toFixed(2))
+  $('.stripe-button').attr('data-amount', gross.toFixed(2) * 100)
 
 $ ->
   $('.best_in_place').bind "ajax:success", (event, data) ->
@@ -20,21 +26,13 @@ $ ->
       if target is 'address' then $(".location-city").html $(data).find(".location-city").html()
       orderTotal()
       $('#order_quantity').on "change", orderTotal
+
+$ ->
+  $('.best_in_place').best_in_place()
 # Sum Order
 $ ->
   orderTotal()
   $('#order_quantity').on "change", orderTotal
-
-
-# Order Total method
-orderTotal = (quantity, price) ->
-  quantity = $('#order_quantity').val()
-  price = $('.price').data('original-content')
-  net_price = quantity * price
-  gross = (net_price / .961) + 0.30
-  order_price = if price > 0 then gross else 0.0
-  $('.order-total').html(order_price.toFixed(2))
-  # $('.stripe-button').attr('data-amount', number * 100)
 
 # Filter form for index page
 $ ->
