--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -34,7 +34,8 @@
   <div class="row-fluid">
     <div class="span6 offset6">
       <h3 class="">Why?</h3>
-      <p class="lead">Because I don't enjoy empty venues as a fan or as a musician. Because a lot of independent music isn't being toured that needs to be.
+      <p class="lead">Because no one enjoys empty venues. <br>
+      Because independent music isn't being toured. <br>
       Because Artists should never pay to play. </p>
      </div>
   </div>
