--- a/app/views/organizer/events/show.html.erb
+++ b/app/views/organizer/events/show.html.erb
@@ -5,7 +5,7 @@
 <% else %>
   <div class="row-fluid">
     <div class="span12">
-      <ul class="inline">
+      <ul class="inline visible-desktop">
         <li>
           <div class="btn-group">
             <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
@@ -14,16 +14,33 @@
             </a>
             <ul class="dropdown-menu">
               <% @events.each do |e| %>
-              <li><%= link_to "#{truncate(e.venue, length: 10)} | #{e.date.strftime('%d %b')}", organizer_event_path(e) %></li>
+              <li><%= link_to "#{truncate(@event.title, length: 15)} | #{truncate(e.venue, length: 10)} | #{e.date.strftime('%d %b')}", organizer_event_path(e) %></li>
               <% end %>
             </ul>
           </div>
         </li>
-        <li><span class="well well-small">Viewing: <%= link_to "#{truncate(@event.title)} | #{@event.location.city} | #{@event.date.strftime('%d %b')}", event_path(@event), target: "_blank" %> <i class="icon-external-link"></i></span></li>
+        <li><span class="well well-small"> Viewing: <%= link_to "#{truncate(@event.title)} | #{@event.location.city} | #{@event.date.strftime('%d %b')}", event_path(@event), target: "_blank" %></span></li>
+        <li class="divider-vertical"></li>
         <li><span class="well well-small"><i class="icon-time"></i> Time: <%= @event.left_to_go  %> left</span></li>
         <li><span class="well well-small"><i class="icon-money"></i> Sales: <%= number_to_currency(@event.orders.sum(&:total_price)) %></span></li>
         <li><span class="well well-small"><i class="icon-ticket"></i> Tickets: <%= @event.capacity - @event.orders.funding.sum(:quantity) %> left</span></li>
         <li class="visible"><span class="well well-small"><%= @event.private_or_public %></span></li>
+      </ul>
+      <ul class="inline hidden-desktop">
+        <li>
+          <div class="btn-group">
+            <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+              Change Event
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <% @events.each do |e| %>
+              <li><%= link_to "#{truncate(@event.title, length: 30)} | #{truncate(e.venue, length: 10)} | #{e.date.strftime('%d %b')}", organizer_event_path(e) %></li>
+              <% end %>
+            </ul>
+          </div>
+        </li>
+        <li><%= link_to "#{truncate(@event.title)} | #{@event.location.city} | #{@event.date.strftime('%d %b')}", event_path(@event), target: "_blank" %></li>
       </ul>
     </div>
   </div>
@@ -43,6 +60,7 @@
               <div class="span6">
                 <%= simple_form_for :alter_event, url: defer_or_cancel_organizer_event_path, method: :post, html: {class: 'form-horizontal'} do |f| %>
                 <legend>Defer or Cancel Event</legend>
+                <div class="hidden-desktop"><span class="label label-info"><i class="icon-time"></i> Time: <%= @event.left_to_go  %> left </span></div> <br>
                   <%= f.input :date, as: :datepicker, label: "New date for event if deferring", placeholder: "  Currently #{@event.date.strftime('%d %b %Y')}", required: false %>
                   <%= f.input :message, as: :text, :input_html => { :cols => 5, :rows => 3 }, label: "Add an explanation for your action", placeholder: "We have been forced to cancel because...." %>
                   <%= f.submit "Defer", name: "defer", data: { confirm: "Defer?"}, class: "btn btn-warning" %>
@@ -52,6 +70,7 @@
               <div class ="span6">
                 <form class="form-horizontal">
                 <legend>Settings</legend>
+                <div class="hidden-desktop"><span class="label label-info"><%= @event.private_or_public %></span></div> <br>
                 <div class="control-group">
                   <label class="control-label" for="">Toggle Visibility</label>
                   <div class="controls">
@@ -91,6 +110,7 @@
             </div>
             <div class="row-fluid">
               <div class="span3">
+                  <button class="btn btn-info btn-block hidden-desktop">Sales <%= number_to_currency(@event.orders.sum(&:total_price)) %></button>
                 <% if @orders.any?(&:stripe_event_tickets_sent?) %>
                   <button class="btn-success btn-block">Orders Processed <i class="icon-ok"></i></button>
                 <% else %>
@@ -145,6 +165,7 @@
             <div class="row-fluid">
               <div class="span3">
                 <button class="btn-info btn-block"><%= @tickets.where('admitted is not null').count %> of <%= @tickets.count %> Admitted </button>
+                <button class="desktop-hidden btn-info btn-block"><%= @event.capacity - @event.orders.funding.sum(:quantity) %> tickets left </button>
                 <%= link_to "Tickets PDF", organizer_event_tickets_path(@event, format: "pdf"), class: "btn btn-block", target: "_blank" %>
               </div>
               <div class="span9">
