--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -22,13 +22,13 @@
   <div class="row-fluid">
     <div class="span6 offset6">
       <h3>What is it?</h3>
-      <p class="lead">A Funding & Ticketing platform for building viable live events. No time-limits, no cancellation fees, no risk.</p>
+      <p class="lead">A Funding & Ticketing platform for organizing viable tour dates. No time-limits, no cancellation fees, no risk.</p>
     </div>
   </div>
   <div class="row-fluid">
     <div class="span6 offset6">
       <h3 class="">Who is it for?</h3>
-      <p class="lead">Any party who is concerned about reaching a cash or attendance target before commiting to a live event.</p>
+      <p class="lead">Anyone who is concerned about reaching a cash or attendance target before commiting to a live event.</p>
     </div>
   </div>
   <div class="row-fluid">
@@ -36,7 +36,7 @@
       <h3 class="">Why?</h3>
       <p class="lead">Because no one enjoys empty venues. <br>
       Because independent music isn't being toured. <br>
-      Because Artists should never pay to play. </p>
+      Because artists should never pay to play. </p>
      </div>
   </div>
   </div>
