home page looking ok now

--- a/app/views/layouts/landing.html.erb
+++ b/app/views/layouts/landing.html.erb
@@ -17,16 +17,16 @@
     <![endif-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
-  <body id="<%= params[:controller].parameterize %>_controller" class="splash-image">
+  <body class="splash-image">
     <div class="wrapper">
-      <div class=>
+      <div>
         <%= yield %>
       </div>
-      <div class="push"><!--//--></div>
+      <div class="push"></div>
     </div>
     <footer>
       <div class="container landing">
-        <ul class="inline">
+        <ul class="list-inline">
           <li><%= link_to "© 100 Motels Ltd 2013", info_path %></li>
           <li><%= link_to "Terms of Service", info_path %></li>
           <li><%= link_to "Legal and Privacy", info_path %></li>
