--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -7,12 +7,6 @@
           <span class="selected-action">Filter by Date</span>
           <span class="caret"></span>
         </a>
-        <ul class="dropdown-menu">
-					<li class="selected"><%= link_to "Anytime ", events_path(query: params[:query]) %></li>
-					<li><%= link_to "Today", events_path(query: params[:query], tonight: "true") %></li>
-					<li><%= link_to "This Week", events_path(query: params[:query], week_end: "true") %></li>
-					<li><%= link_to "This Month", events_path(query: params[:query], month_end: "true") %></li>
-				</ul>
 			</div>
 		</div>
 	</div>
@@ -29,8 +23,7 @@
 	                <%= image_tag "ranelag.gif", height: "200", width: "200" %>
                 <% end %>
                 <div class="event-index-artists">
-									<h3><%= truncate(event.title) %><br><small><%= truncate(event.artist) %></small></h3>
-									<h6><%= truncate(event.location.city, length: 15) %> - <%= event.date.strftime('%d/%m/%Y') %></h6>
+									<h3><%= truncate(event.name) %></h3>
 								</div>
 							</a>
 						</li>
