--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -11,128 +11,63 @@
   <%= tag :meta, name: "twitter:image", content: @event.image %>
 <% end %>
 <% content_tag :header, title(@event) %>
-<div class="container" id="event-background">
-	<% if @event.event_owner? %>
-	<% end %>
-	<section id="event-information">
-		<div class="row">
-			<div class="col-lg-12 event-header">
+<section id="event-banner" data-url='<%= @event.image %>'>
+	<div class="row">
+		<div class="col-lg-12 event-header">
+			<div class="container">
 				<div class="pull-right"><%= @event.filepicker %></div>
 				<h2>
 					<small><%= @event.edit_icon %> <%= @organizer.user_name || "organizer's business name" %> presents </small><br>
 					<%= @event.edit_icon %> <%= @event.bip_title %><br>
 					<small>
 						<%= @event.edit_icon %> <%= @event.formatted_date %> |
-						<a href="#tickets"><i class="icon-shopping-cart"></i></a>
-						<a href="#location"><i class="icon-map-marker"></i></a>
-						<a href="#event-playlist"><i class="icon-headphones"></i></a>
-						<a href="#event-vimeo"><i class="icon-film"></i></a>
-						<a href="#about"><i class="icon-info-sign"></i></a>
-						<a href="#bio"><i class="icon-quote-left"></i></a><br>
 					</small>
 				</h2>
 			</div>
 		</div>
-		<hr>
-		<div class="row poster-information=" id="inlay">
-			<div class="col-lg-6 event-poster" data-url='<%= @event.image %>'>
-				<h1><i class="icon-info-sign muted" id="about"></i></h1>
-				<div class="event-funding well well-small">
-					<h3>
-						<%= @event.edit_icon %> <%= @event.bip_artist %> <br>
-					<small><%= @event.edit_icon %> <%= @event.bip_first_support %> ● <%= @event.bip_second_support %> ● <%= @event.bip_third_support %> </small>
-					</h3>
-					<h3 class="hidden-desktop">
-						<div class="disabled-shares" data-toggle="popover" title="" data-content="Share" data-placement="bottom">
-							<i class="icon-facebook"></i>
-							<i class="icon-twitter"></i>
-							<i class="icon-google-plus"></i>
-							<i class="icon-share"></i>
+	</div>
+</section>
+<section id="event-sharing">
+	<div class="row">
+		<div class="col-lg-12 event-poster">
+			<div class="event-funding">
+				<h3 class="visible-desktop">
+					<div class="addthis_toolbox">
+						<div class="custom_images">
+							<a href="http://www.facebook.com/sharer.php?u=<%= event_url(@event) %>"class="" target="_blank"><i class="icon-facebook"></i></a>
+                <a href="https://twitter.com/share?text=<%= @event.name %>&url=<%= event_url(@event) %>&via=100Motels" class="" target="_blank"><i class="icon-twitter"></i></a>
+                <a href="https://plus.google.com/share?url=<%= event_url(@event) %>" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="" target="_blank"><i class="icon-google-plus"></i></a>
+							<a class="addthis_button_more"><i class="icon-share"></i></a>
 						</div>
-					</h3>
-					<h3 class="visible-desktop">
-						<div class="addthis_toolbox">
-							<div class="custom_images">
-								<a href="http://www.facebook.com/sharer.php?u=<%= event_url(@event) %>"class="" target="_blank"><i class="icon-facebook"></i></a>
-                  <a href="https://twitter.com/share?text=<%= @event.name %>&url=<%= event_url(@event) %>&via=100Motels" class="" target="_blank"><i class="icon-twitter"></i></a>
-                  <a href="https://plus.google.com/share?url=<%= event_url(@event) %>" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="" target="_blank"><i class="icon-google-plus"></i></a>
-								<a class="addthis_button_more"><i class="icon-share"></i></a>
-							</div>
-						</div>
-					</h3>
-
-					<% if @event.on_sale? %>
-						<h4><%= @event.left_to_go %> left to sell <%= @event.sales %> tickets</h4>
-						<div class="progress">
-						  <div class="bar" style="width: 100%;" data-funded="<%= @event.per_cent_funded %>"><%= @event.per_cent_funded %>% funded</div>
-						</div>
-					<% else %>
-						<h3> <small>Ticket sales for this event have now finished. Thanks for your support!</small></h3>
-					<% end %>
-				</div>
-			</div>
-			<hr>
-			<div class="col-lg-6 event-ticket-orders" data-price='<%= @event.ticket_price %>' id="tickets">
-				<h1><i class="icon-shopping-cart muted"></i></h1>
-				<div class="pagination-centered well well-small ticket_price">
-					<% if @event.on_sale? %>
-						<h3><%= @event.edit_icon %> <%= @event.price %><small> each</small></h3>
-						<%= @event.ticket_form %>
-						<h3><%= @event.order_total %>
-							<small><col-lg- class="charge-info" data-toggle="popover" title="" data-content="Card Processing is 2.9% + 30c + our fee (currently 1%)" data-original-title="Processing Fees" data-placement="bottom">
-								inc.charges
-							  </col-lg->
-      				</small>
-      			</h3>
-					<% end %>
-				</div>
-			</div >
-		</div>
-	</section>
-	<hr>
-	<section id="event-media" class="event">
-		<div class="row">
-			<div class="col-lg-6">
-				<h1><i class="icon-quote-left muted" id="bio"></i></h1>
-				<div class="about about-event"><%= @event.edit_icon %> <%= @event.about_section %></div>
-			</div>
-			<div class="col-lg-6">
-				<h1><i class="icon-map-marker muted" id="location"></i></h1>
-				<div class="row" >
-					<div class="col-lg-6 event-map address"><%= @event.map %></div>
-					<div class="col-lg-6 event-map venue-info">
-						<dl>
-							<dt>Venue:</dt>
-							<dd><strong><%= @event.edit_icon %> <%= @event.venue %></strong></dd><br>
-							<dt>Address:</dt>
-							<dd>
-								<address>
-								  <%= @event.edit_icon %> <%= @event.venue_address %>
-								</address>
-							</dd>
-							<dt>Doors open at:</dt>
-							<dd><%= @event.edit_icon %> <%= @event.doors %></dd>
-						</dl>
-						<% unless @organizer.guest? %>
-							<a href="#privateMessage" data-toggle="modal">Contact Organizer <i class="icon-envelope"></i></a>
-						<% end %>
 					</div>
+				</h3>
+				<h4>Sales <%= @event.sales %> tickets</h4>
+				<div class="progress">
+				  <div class="bar" style="width: 100%;" data-funded="<%= @event.per_cent_funded %>"><%= @event.per_cent_funded %>% funded</div>
 				</div>
 			</div>
 		</div>
 		<hr>
-		<div class="row">
-			<div class="col-lg-6" id="event-vimeo">
-				<h1><i class="icon-film muted"></i></h1>
-					<%= @event.edit_icon %> <%= @event.video %><div class="flex-video video"><%= @event.video_iframe %></div>
+	</div>
+</section>
+<section id="event-tickets">
+	<div class="row">
+		<div class="col-lg-12" data-price='<%= @event.ticket_price %>' id="tickets">
+			<div class="ticket_price">
+				<h3><%= @event.edit_icon %> <%= @event.price %><small> each</small></h3>
+				<%= @event.ticket_form %>
+				<h3><%= @event.order_total %></h3>
 			</div>
-			<div class="col-lg-6" id="event-playlist">
-				<h1><i class="icon-headphones muted"></i></h1>
-					<%= @event.edit_icon %> <%= @event.music %><div class="music"><%= @event.music_iframe %></div>
-			</div>
+		</div >
+	</div>
+</section>
+<section id="event-media" class="event">
+	<div class="row">
+		<div class="col-lg-12">
+			<div class="about about-event"><%= @event.edit_icon %> <%= @event.about_section %></div>
 		</div>
-	</section>
-</div>
+	</div>
+</section>
 
 
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-513ba15373992907">
