--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,8 +3,8 @@
   <head>
     <title> <%= yield(:title) %></title>
     <%= stylesheet_link_tag    "application", :media => "all" %>
-    <%= javascript_include_tag "application" %>
     <%= filepicker_js_include_tag %>
+    <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
     <%= yield :head %>
     <!--if [lt IE 9]>
@@ -46,7 +46,7 @@
           </div>
         </div>
       </nav>
-      <div class="container" id="main">
+      <div>
         <% flash.each do |key, value| %>
           <div class="alert alert-<%= key == :notice ? "success" : "error" %>">
             <a class="close" data-dismiss="alert">&#215;</a>
