added jquery sass rials

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,5 +1,6 @@
 @import "bootstrap";
 @import "bootstrap/theme";
+@import jquery-ui-draggable;
 @import "layout";
 @import "pages";
 @import "events";
