jquery ui slimscroll working again

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,6 @@
 @import "bootstrap";
 @import "bootstrap/theme";
-@import jquery-ui-draggable;
+@import "jquery.ui.all";
 @import "layout";
 @import "pages";
 @import "events";
