--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -24,67 +24,66 @@
       min-width: 500px;
     }
   }
-    // min-width: 200px;
 }
 
   // validation notices for best in place
-  .purr {
-    position: fixed;
-    top: 30px;
-    right: 100px;
-    width: auto;
-    padding: 20px;
-    @extend .alert;
-    @extend .alert-error;
-    &:first-letter { text-transform: uppercase };
-  }
+.purr {
+  position: fixed;
+  top: 30px;
+  right: 100px;
+  width: auto;
+  padding: 20px;
+  @extend .alert;
+  @extend .alert-error;
+  &:first-letter { text-transform: uppercase };
+}
 
-  .link-button-show {
-    text-decoration: none;
-    border: none;
-    background-color: transparent;
-    display: block;
-    padding: 3px 20px;
-    clear: both;
-    font-weight: normal;
-    line-height: 20px;
-    color: #333333;
-    white-space: nowrap;
+.link-button-show {
+  text-decoration: none;
+  border: none;
+  background-color: transparent;
+  display: block;
+  padding: 3px 20px;
+  clear: both;
+  font-weight: normal;
+  line-height: 20px;
+  color: #333333;
+  white-space: nowrap;
 
-    &:hover,
-    &:focus {
-      color: #ffffff;
-      background-color: #0081c2;
-      background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
-      background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
-      background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
-      background-image: -o-linear-gradient(top, #0088cc, #0077b3);
-      background-image: linear-gradient(to bottom, #0088cc, #0077b3);
-      background-repeat: repeat-x;
-      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
-    }
+  &:hover,
+  &:focus {
+    color: #ffffff;
+    background-color: #0081c2;
+    background-image: -moz-linear-gradient(top, #0088cc, #0077b3);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#0088cc), to(#0077b3));
+    background-image: -webkit-linear-gradient(top, #0088cc, #0077b3);
+    background-image: -o-linear-gradient(top, #0088cc, #0077b3);
+    background-image: linear-gradient(to bottom, #0088cc, #0077b3);
+    background-repeat: repeat-x;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff0088cc', endColorstr='#ff0077b3', GradientType=0);
   }
+}
 
 
 
 .link-button {
-    text-decoration: none;
-    text-align: left;
-    border: none;
-    background-color: transparent;
-    font-weight: normal;
-    padding: 8px 12px;
-    line-height: 20px;
-    color: #08C;
-    border: 1px solid #DDD;
+  text-decoration: none;
+  text-align: left;
+  border: none;
+  background-color: transparent;
+  font-weight: normal;
+  padding: 8px 12px;
+  line-height: 20px;
+  color: #08C;
+  border: 1px solid #DDD;
 
-    &:hover,
-    &:focus {
-      z-index: 2;
-      border-color: #ddd;
-      background-color: #eeeeee;
-    }
+  &:hover,
+  &:focus {
+    z-index: 2;
+    border-color: #ddd;
+    background-color: #eeeeee;
   }
+}
 
 
 //event show
@@ -195,4 +194,12 @@ small {
   &:hover {
     text-decoration: none;
   }
+}
+
+.progress {
+  height: 40px;
+}
+
+.progress-bar {
+  font-size: 20px;
 }
