--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -17,54 +17,61 @@
 			<div class="container">
 				<div class="pull-right"><%= @event.filepicker %></div>
 				<h2>
-					<small><%= @event.edit_icon %> <%= @organizer.user_name || "organizer's business name" %> presents </small><br>
-					<%= @event.edit_icon %> <%= @event.bip_title %><br>
-					<small>
-						<%= @event.edit_icon %> <%= @event.formatted_date %> |
-					</small>
+					<%= @organizer.user_name || "organizer's business name" %> presents<br>
+					<%= @event.bip_title %><br>
+					<%= @event.formatted_date %> | <%= @event.location %>
 				</h2>
 			</div>
 		</div>
 	</div>
 </section>
-<section id="event-sharing">
+<section id="event-information">
+	<div class="progress">
+	  <div class="progress-bar" role="progressbar" style="width: 100%;" data-funded="<%= @event.per_cent_funded %>"><%= @event.per_cent_funded %>% funded</div>
+	</div>
 	<div class="row">
-		<div class="col-lg-12 event-poster">
-			<div class="event-funding">
-				<h3 class="visible-desktop">
-					<div class="addthis_toolbox">
-						<div class="custom_images">
-							<a href="http://www.facebook.com/sharer.php?u=<%= event_url(@event) %>"class="" target="_blank"><i class="icon-facebook"></i></a>
-                <a href="https://twitter.com/share?text=<%= @event.name %>&url=<%= event_url(@event) %>&via=100Motels" class="" target="_blank"><i class="icon-twitter"></i></a>
-                <a href="https://plus.google.com/share?url=<%= event_url(@event) %>" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="" target="_blank"><i class="icon-google-plus"></i></a>
-							<a class="addthis_button_more"><i class="icon-share"></i></a>
-						</div>
+		<div class="col-lg-4">
+			<div class="visible-desktop">
+				<div class="addthis_toolbox">
+					<div class="custom_images">
+						<ul class="list-inline">
+							<li><a href="http://www.facebook.com/sharer.php?u=<%= event_url(@event) %>"class="" target="_blank"><i class="icon-facebook"></i></a></li>
+	              <li><a href="https://twitter.com/share?text=<%= @event.name %>&url=<%= event_url(@event) %>&via=100Motels" class="" target="_blank"><i class="icon-twitter"></i></a></li>
+	              <li><a href="https://plus.google.com/share?url=<%= event_url(@event) %>" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="" target="_blank"><i class="icon-google-plus"></i></a></li>
+							<li><a class="addthis_button_more"><i class="icon-share"></i></a></li>
+						</ul>
 					</div>
-				</h3>
-				<h4>Sales <%= @event.sales %> tickets</h4>
-				<div class="progress">
-				  <div class="bar" style="width: 100%;" data-funded="<%= @event.per_cent_funded %>"><%= @event.per_cent_funded %>% funded</div>
 				</div>
 			</div>
 		</div>
-		<hr>
+		<div class="col-lg-4">
+			<form class="form-inline" role="form">
+			  <div class="form-group">
+			    <label class="sr-only" for="exampleInputEmail2">Email address</label>
+			    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter email">
+			  </div>
+			  <div class="form-group">
+			    <select class="form-control" placeholder="quantity">
+			      <option>1 ticket</option>
+			      <option>2 tickets</option>
+			      <option>3 tickets</option>
+			      <option>4 tickets</option>
+			      <option>5 tickets</option>
+			    </select>
+			  </div>
+			  <button type="submit" class="btn btn-primary">Purchase</button>
+			</form>
+		</div>
+		<div class="col-lg-4"><h5><%= @event.order_total %></h5></div>
 	</div>
 </section>
-<section id="event-tickets">
-	<div class="row">
-		<div class="col-lg-12" data-price='<%= @event.ticket_price %>' id="tickets">
-			<div class="ticket_price">
-				<h3><%= @event.edit_icon %> <%= @event.price %><small> each</small></h3>
-				<%= @event.ticket_form %>
-				<h3><%= @event.order_total %></h3>
-			</div>
-		</div >
-	</div>
-</section>
+<hr>
 <section id="event-media" class="event">
 	<div class="row">
 		<div class="col-lg-12">
-			<div class="about about-event"><%= @event.edit_icon %> <%= @event.about_section %></div>
+			<div class="container">
+				<div class="event-media-html"><%= @event.about_section %></div>
+			</div>
 		</div>
 	</div>
 </section>
