--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -29,40 +29,42 @@
 	<div class="progress">
 	  <div class="progress-bar" role="progressbar" style="width: 100%;" data-funded="<%= @event.per_cent_funded %>"><%= @event.per_cent_funded %>% funded</div>
 	</div>
-	<div class="row">
-		<div class="col-lg-4">
-			<div class="visible-desktop">
-				<div class="addthis_toolbox">
-					<div class="custom_images">
-						<ul class="list-inline">
-							<li><a href="http://www.facebook.com/sharer.php?u=<%= event_url(@event) %>"class="" target="_blank"><i class="icon-facebook"></i></a></li>
-	              <li><a href="https://twitter.com/share?text=<%= @event.name %>&url=<%= event_url(@event) %>&via=100Motels" class="" target="_blank"><i class="icon-twitter"></i></a></li>
-	              <li><a href="https://plus.google.com/share?url=<%= event_url(@event) %>" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="" target="_blank"><i class="icon-google-plus"></i></a></li>
-							<li><a class="addthis_button_more"><i class="icon-share"></i></a></li>
-						</ul>
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-6">
+				<div class="visible-desktop">
+					<div class="addthis_toolbox">
+						<div class="custom_images">
+							<ul class="list-inline">
+								<li><a href="http://www.facebook.com/sharer.php?u=<%= event_url(@event) %>"class="" target="_blank"><i class="icon-facebook"></i></a></li>
+		              <li><a href="https://twitter.com/share?text=<%= @event.name %>&url=<%= event_url(@event) %>&via=100Motels" class="" target="_blank"><i class="icon-twitter"></i></a></li>
+		              <li><a href="https://plus.google.com/share?url=<%= event_url(@event) %>" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=600,width=600');return false;" class="" target="_blank"><i class="icon-google-plus"></i></a></li>
+								<li><a class="addthis_button_more"><i class="icon-share"></i></a></li>
+							</ul>
+						</div>
 					</div>
 				</div>
 			</div>
+			<div class="col-lg-4">
+				<form class="form-inline" role="form">
+				  <div class="form-group">
+				    <label class="sr-only" for="exampleInputEmail2">Email address</label>
+				    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter email">
+				  </div>
+				  <div class="form-group">
+				    <select class="form-control" placeholder="quantity">
+				      <option>1 ticket</option>
+				      <option>2 tickets</option>
+				      <option>3 tickets</option>
+				      <option>4 tickets</option>
+				      <option>5 tickets</option>
+				    </select>
+				  </div>
+				  <button id="checkout" type="button" class="btn btn-primary">Purchase</button>
+				</form>
+			</div>
+			<div class="col-lg-2"><%= @event.order_total %></div>
 		</div>
-		<div class="col-lg-4">
-			<form class="form-inline" role="form">
-			  <div class="form-group">
-			    <label class="sr-only" for="exampleInputEmail2">Email address</label>
-			    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter email">
-			  </div>
-			  <div class="form-group">
-			    <select class="form-control" placeholder="quantity">
-			      <option>1 ticket</option>
-			      <option>2 tickets</option>
-			      <option>3 tickets</option>
-			      <option>4 tickets</option>
-			      <option>5 tickets</option>
-			    </select>
-			  </div>
-			  <button type="submit" class="btn btn-primary">Purchase</button>
-			</form>
-		</div>
-		<div class="col-lg-4"><h5><%= @event.order_total %></h5></div>
 	</div>
 </section>
 <hr>
