--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= filepicker_js_include_tag %>
     <%= javascript_include_tag "application" %>
+    <script src="https://checkout.stripe.com/v2/checkout.js"></script>
     <%= csrf_meta_tags %>
     <%= yield :head %>
     <!--if [lt IE 9]>
