--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -27,7 +27,9 @@
 </section>
 <section id="event-information">
 	<div class="progress">
-	  <div class="progress-bar" role="progressbar" style="width: 100%;" data-funded="<%= @event.per_cent_funded %>"><%= @event.per_cent_funded %>% funded</div>
+	  <div class="progress-bar" role="progressbar" style="width: 100%;" data-funded="<%= @event.per_cent_funded %>">
+		  <%= @event.per_cent_funded %>% funded
+	  </div>
 	</div>
 	<div class="container">
 		<div class="row">
@@ -52,18 +54,18 @@
 				    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Enter email">
 				  </div>
 				  <div class="form-group">
-				    <select class="form-control" placeholder="quantity">
-				      <option>1 ticket</option>
-				      <option>2 tickets</option>
-				      <option>3 tickets</option>
-				      <option>4 tickets</option>
-				      <option>5 tickets</option>
+				    <select class="form-control" id="order_quantity">
+				      <option value="1">1 ticket </option>
+				      <option value="2">2 tickets</option>
+				      <option value="3">3 tickets</option>
+				      <option value="4">4 tickets</option>
+				      <option value="5">5 tickets</option>
 				    </select>
 				  </div>
 				  <button id="checkout" type="button" class="btn btn-primary">Purchase</button>
 				</form>
 			</div>
-			<div class="col-lg-2"><%= @event.order_total %></div>
+			<div class="col-lg-2"><div class="price" data-price='<%= @event.ticket_price %>'><%= @event.order_total %></div=></div>
 		</div>
 	</div>
 </section>
@@ -77,8 +79,6 @@
 		</div>
 	</div>
 </section>
-
-
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-513ba15373992907">
 	var addthis_share = {
      url_transforms : {
