--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,7 +41,8 @@
               <% end %>
               <!-- <li class="divider-vertical"></li> -->
               <% if current_user %>
-                <%= render "current_user_menu" %>
+                <li><%= link_to "Admin", user_path(current_user) %></li>
+                <li><%= link_to "Sign out", logout_path %></li>
               <% end %>
             </ul>
           </div>
@@ -58,6 +59,7 @@
       </div> <!-- /content container -->
       <div class="push"></div>
     </div> <!-- /wrap -->
+    <hr>
     <footer>
       <div class="container">
         <ul class="list-inline">
