--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -36,7 +36,7 @@ $xlarge: 1200;
 html, body  {
     height: 100%;
     .not-landing {
-      background-image: url(image_path('tex2res5.png'));
+      // background-image: url(image_path('tex2res5.png'));
       // background-image: url(image_path('weave.png'));
     }
 }
